...
          );

    return Scaffold(
      extendBodyBehindAppBar: true,
      appBar: CdbAppBar(
        showBackButton: false,
        title: _currentPage == 0 ? 'Welcome' : 'News',
        leading: Transform.rotate(
          angle: 3.14,
          child: IconButton(
            icon: Icon(
              Icons.exit_to_app,
              color: theme.colorScheme.secondary,
...
                            topLeft: Radius.circular(15),
                            topRight: Radius.circular(15),
                          ),
                        ),
                      ),
                      child: Text(
                        _currentPage == 0 ? 'Next' : 'Continue',
                        style: theme.textTheme.bodyLarge?.copyWith(
                          fontSize: 22,
                          color: theme.colorScheme.primary,
                        ),
                      ),
                    ),
...
